# mpac-mcp

./: .dockerignore  .gitignore  AAAI_EXPERIMENT_PLAN.md  BETA_ACCESS.md  CLAUDE_CODE_SETUP.md  MPAC_Developer_Reference.md  NEXT_STEPS_MPAC_MCP_PRODUCT_PLAN.md  README.md  SPEC.md  local_config.example.json  pyproject.toml  test_e2e.py  test_e2e_scenarios.py  test_interactive.py  test_ultimate.py
.github/workflows/: ci.yml  deploy-pages.yml
blog/: introducing-mpac.md
daily_reports/: 2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md
deploy/aws-lightsail/: .gitignore  README.md  api.env.example  bootstrap.sh  docker-compose.yml  nginx.conf.template
deploy/fly-coordinator/: Caddyfile  Dockerfile  entrypoint.sh  fly.toml
deploy/fly-webapi/: Dockerfile  README.md  fly.toml
deploy/fly-webapp/: Dockerfile  README.md
deploy/legacy-fly/: README.md  deploy-webapp.sh
deploy/scripts/: sync-deploy-branch.sh  sync-opensource-branches.sh
docs/: API.md  BETA_EXAMPLE.md  BETA_SCENARIOS.md  BETA_SCENARIOS_legacy.md  CONFLICT_TEST_SCENARIOS.md  TWO_USER_TESTS.md
docs/planning/: MPAC_MCP_PRODUCT_DECISION_DECK.md
examples/: demo_basic.py
frontend/: app.js  index.html  scenarios-data.js  styles.css
guided/: app.js  index.html  styles.css
mpac/: __init__.py  scenarios.py
mpac-mcp/: README.md  pyproject.toml
mpac-mcp/docs/: API.md
mpac-mcp/src/mpac_mcp/: claude_setup.py  config.py  coordinator_bridge.py  relay.py  relay_tools.py  server.py  sidecar.py  smoke_commit.py  smoke_governance.py  smoke_takeover.py
mpac-mcp/tests/: test_announce_intent_race_handling.py  test_bridge_logic.py  test_claude_setup.py  test_config.py  test_relay_error_reporting.py  test_system_prompt.py
mpac-package/: README.md  pyproject.toml
mpac-package/tests/: test_dependency_breakage.py
mpac-starter-kit/: mpac_protocol-0.1.0-py3-none-any.whl
mpac/agents/: mock_agent.py
mpac/live/: __init__.py  anthropic_client.py  demo.py  guided_scenarios.py  local_config.py
mpac/models/: __init__.py  conflict.py  envelope.py  governance.py  intent.py  messages.py  operation.py  (+1 more)
mpac_event_recorder/: README.md  __init__.py  recorder.py
playground/: app.js  index.html  styles.css
ref-impl/python/: pyproject.toml
ref-impl/python/mpac/: __init__.py  coordinator.py  envelope.py  models.py  participant.py  scope.py  state_machines.py
ref-impl/python/tests/: test_auto_dismiss.py  test_conflict.py  test_conflict_workflow.py  test_intent_update_claim.py  test_v0110_features.py  test_v0112_enforcement.py  test_v015_features.py  test_v016_features.py
scripts/: conflict_test_harness.py  demo_driver.py  export_scenarios.py  mpac_load_test.py  repro_self_conflict_2026-04-28.py  seed_beta_scenarios.py  seed_example_project.py  seed_test_users.py
test_site_A/: run.py
test_site_B/: run.py
tests/: test_announce_intent_race_handling.py  test_e2e.py  test_e2e_scenarios.py  test_guided_scenarios.py  test_interactive.py  test_live_demo.py  test_relay_error_reporting.py  test_runtime.py  test_sidecar_script.py  test_spec_scenarios.py  test_system_prompt.py  test_ultimate.py  test_web_app_mpac_bridge.py
version_history/: CHANGELOG.md  README.md
(+159 files in other folders)
