[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpac-mcp"
version = "0.1.0"
description = "MCP bridge for MPAC: coordinate coding agents working on the same repository"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kaiyang Qian", email = "kaiyang.2.qian@ucdenver.edu"},
]
dependencies = [
    "websockets>=12.0",
    "mcp>=1.0.0",
    "mpac>=0.1.0",
]

[project.scripts]
mpac-mcp = "mpac_mcp.server:main"
mpac-mcp-sidecar = "mpac_mcp.sidecar:main"
mpac-mcp-milestone0 = "mpac_mcp.milestone0:main"
mpac-mcp-smoke-tools = "mpac_mcp.smoke_tools:main"
mpac-mcp-smoke-commit = "mpac_mcp.smoke_commit:main"
mpac-mcp-smoke-governance = "mpac_mcp.smoke_governance:main"
mpac-mcp-smoke-takeover = "mpac_mcp.smoke_takeover:main"
mpac-mcp-claude-setup = "mpac_mcp.claude_setup:main"

[tool.setuptools.packages.find]
where = ["src"]
